# macos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: ci.yml
gtest/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  main.cpp
